--- a/install.html
+++ b/install.html
@@ -30,11 +30,34 @@ function checkCookie() {
   if (user != "") {
     alert("Error installing Find Me.");
   } else {
-		// code for sw install
-		setCookie("installed", "1", 365);
+		const registerServiceWorker = async () => {
+  if ("serviceWorker" in navigator) {
+    try {
+      const registration = await navigator.serviceWorker.register("/sw.js", {
+        scope: "/",
+      });
+      if (registration.installing) {
+        console.log("Service worker installing");
+      } else if (registration.waiting) {
+        setCookie("installed", "1", 365);
         location.replace("/home")
+      } else if (registration.active) {
+        console.log("Service worker active");
+      }
+    } catch (error) {
+      console.error(`Registration failed with ${error}`);
+    }
+  }
+};
+
+// …
+
+registerServiceWorker();
+
      }
   }
+	
+	
 </script>
 </head>
 
