--- a/install.html
+++ b/install.html
@@ -2,34 +2,7 @@
 <html>
 <head>
 <script>
-function setCookie(cname,cvalue,exdays) {
-  const d = new Date();
-  d.setTime(d.getTime() + (exdays*24*60*60*1000));
-  let expires = "expires=" + d.toUTCString();
-  document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
-}
 
-function getCookie(cname) {
-  let name = cname + "=";
-  let decodedCookie = decodeURIComponent(document.cookie);
-  let ca = decodedCookie.split(';');
-  for(let i = 0; i < ca.length; i++) {
-    let c = ca[i];
-    while (c.charAt(0) == ' ') {
-      c = c.substring(1);
-    }
-    if (c.indexOf(name) == 0) {
-      return c.substring(name.length, c.length);
-    }
-  }
-  return "";
-}
-
-function checkCookie() {
-  let user = getCookie("installed");
-  if (user != "") {
-    alert("Error installing Find Me.");
-  } else {
 		const registerServiceWorker = async () => {
   if ("serviceWorker" in navigator) {
     try {
@@ -39,7 +12,6 @@ function checkCookie() {
       if (registration.installing) {
         console.log("Service worker installing");
       } else if (registration.waiting) {
-        setCookie("installed", "1", 365);
         location.replace("/home")
       } else if (registration.active) {
         console.log("Service worker active");
@@ -61,6 +33,6 @@ registerServiceWorker();
 </script>
 </head>
 
-<body onload="checkCookie()"></body>
+<body></body>
 
 </html>
