--- a/install.html
+++ b/install.html
@@ -14,7 +14,7 @@
       } else if (registration.waiting) {
         location.replace("/home")
       } else if (registration.active) {
-        console.log("Service worker active");
+        ocation.replace("/home")
       }
     } catch (error) {
       console.error(`Registration failed with ${error}`);
