--- a/install.html
+++ b/install.html
@@ -14,7 +14,7 @@
       } else if (registration.waiting) {
         location.replace("/home")
       } else if (registration.active) {
-        ocation.replace("/home")
+        location.replace("/home")
       }
     } catch (error) {
       console.error(`Registration failed with ${error}`);
@@ -33,6 +33,6 @@ registerServiceWorker();
 </script>
 </head>
 
-<body></body>
+<h1>Install</h1>
 
 </html>
