--- a/install.html
+++ b/install.html
@@ -1,6 +1,87 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html> <html> <head> <meta charset=UTF-8> <meta name="apple-mobile-web-app-capable" content="yes"> <link rel="apple-touch-icon" href="/gps.webp" /> <meta name="apple-mobile-web-app-title" content="Find Me" /> <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <meta name=viewport content="width=device-width,initial-scale=1"> <title>Find Me</title> <style>*
+	
+	{
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+   }
+
+   body
+   {
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+      max-width: 500px;
+      margin: 2em auto;
+      padding: 0 0.5em;
+      font-size: 20px;
+   }
+
+   h1
+   {
+      text-align: center;
+   }
+
+   .api-support
+   {
+      display: block;
+   }
+
+   .hidden
+   {
+      display: none;
+   }
+
+   .buttons-wrapper
+   {
+      text-align: center;
+   }
+
+   .button-demo
+   {
+      padding: 0.5em;
+      margin: 1em auto;
+   }
+
+   .g-info
+   {
+      font-weight: bold;
+   }
+   .cell {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+}
+   .celltext {
+  position: absolute;
+  top: 0px;
+  right: 45px;
+  font-size: 12px;
+}
+
+@media (prefers-color-scheme: dark) {
+   body {
+     background-color: #18181b;
+     color: white;
+   }
+   svg path {
+      fill:white
+   }
+}
+
+   #log
+   {
+      height: 200px;
+      width: 100%;
+      overflow-y: scroll;
+      border: 1px solid #333333;
+      line-height: 1.3em;
+   }
+
+   .author
+   {
+      display: block;
+      margin-top: 1em;
+   }
+   </style> 
 <script>
 
 		const registerServiceWorker = async () => {
@@ -11,13 +92,15 @@
       });
       if (registration.installing) {
         console.log("Service worker installing");
+	document.getElementById("status").innerHTML = "Installing Find Me"
       } else if (registration.waiting) {
-        location.replace("/home")
+        document.getElementById("status").innerHTML = "Installed. Please relaunch Find Me."
       } else if (registration.active) {
-        location.replace("/home")
+        document.getElementById("status").innerHTML = "Find Me is already installed."
       }
     } catch (error) {
       console.error(`Registration failed with ${error}`);
+      document.getElementById("status").innerHTML = "Error installing Find Me."
     }
   }
 };
@@ -26,13 +109,13 @@
 
 registerServiceWorker();
 
-     }
-  }
+     
 	
 	
 </script>
 </head>
 
 <h1>Install</h1>
+	<center><h2 id="status"></h2></center>
 
 </html>
