--- a/settings.html
+++ b/settings.html
@@ -134,7 +134,7 @@ setInterval(registerServiceWorker, 1000)
 </head>
 
 <h1>Settings</h1>
-<center><h3>Not Ready.</h3></center>
+<center><h3>Menu</h3></center>
 <a class="menulist" href="/uninstall">Uninstall</a>
 <p class="settingsmenu">Swipe left to go back.</p>
 </html>
