--- a/settings.html
+++ b/settings.html
@@ -135,6 +135,6 @@ setInterval(registerServiceWorker, 1000)
 
 <h1>Settings</h1>
 <center><h3>Menu</h3></center>
-<a class="menulist" href="/uninstall">Uninstall</a>
+<center><a class="menulist" href="/uninstall">Uninstall</a></center>
 <p class="settingsmenu">Swipe left to go back.</p>
 </html>
