--- a/uninstall.html
+++ b/uninstall.html
@@ -84,7 +84,10 @@
    </style> 
 <script>
 
-navigator.serviceWorker.getRegistrations().then( function(registrations) { for(let registration of registrations) { registration.unregister().then(document.getElementById("status").innerHTML = "Uninstalled."); } }); 
+navigator.serviceWorker.getRegistrations().then( function(registrations) { for(let registration of registrations) { registration.unregister().then(caches.keys().then(function(names) {
+    for (let name of names)
+        caches.delete(name);
+}); document.getElementById("status").innerHTML = "Uninstalled."); } }); 
 
 // …
      
