--- a/home.html
+++ b/home.html
@@ -39,6 +39,9 @@
    {
       padding: 0.5em;
       margin: 1em auto;
+      -webkit-appearance: none;
+   -moz-appearance:    none;
+   appearance:         none;
    }
 
    .g-info
