--- a/home.html
+++ b/home.html
@@ -42,6 +42,9 @@
       -webkit-appearance: none;
    -moz-appearance:    none;
    appearance:         none;
+background: #0066ff;
+border-radius: 0;
+	   color: white;
    }
 
    .g-info
@@ -98,6 +101,9 @@
       display: block;
       margin-top: 1em;
    }
+input[type="submit"] {
+  border: none;
+}
    </style> 
    </head> 
    <body onload="checkRegistration();"> 
