--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 
    .button-demo
    {
-      padding: 0.5em;
+      padding: 10px 20px;
       margin: 1em auto;
       -webkit-appearance: none;
    -moz-appearance:    none;
