--- a/sossettings.html
+++ b/sossettings.html
@@ -27,7 +27,7 @@ function getCookie(cname) {
 
 function sossettings() {
     var phonedisplay = getCookie('sosphone')
-    document.getElementById('sosphone-display') = phonedisplay
+    document.getElementById('sosphone-display').innerHTML = phonedisplay
 }
 
 </script>
