--- a/setup.html
+++ b/setup.html
@@ -2,7 +2,99 @@
 <html>
 <head>
 <script>
-function setCookie(cname,cvalue,exdays) {
+
+</script>
+</head>
+
+
+
+</html>
+<!DOCTYPE html> <link rel="manifest" href="/manifest.json"> <html> <head> <meta charset=UTF-8> <meta name="apple-mobile-web-app-capable" content="yes"> <link rel="apple-touch-icon" href="/gps.webp" /> <meta name="apple-mobile-web-app-title" content="Find Me" /> <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <meta name=viewport content="width=device-width,initial-scale=1"> <title>Find Me</title> <style>*
+	
+	{
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+   }
+
+   body
+   {
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+      max-width: 500px;
+      margin: 2em auto;
+      padding: 0 0.5em;
+      font-size: 20px;
+   }
+
+   h1
+   {
+      text-align: center;
+   }
+
+   .api-support
+   {
+      display: block;
+   }
+
+   .hidden
+   {
+      display: none;
+   }
+
+   .buttons-wrapper
+   {
+      text-align: center;
+   }
+
+   .button-demo
+   {
+      padding: 0.5em;
+      margin: 1em auto;
+   }
+
+   .g-info
+   {
+      font-weight: bold;
+   }
+   .cell {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+}
+   .celltext {
+  position: absolute;
+  top: 0px;
+  right: 45px;
+  font-size: 12px;
+}
+
+@media (prefers-color-scheme: dark) {
+   body {
+     background-color: #18181b;
+     color: white;
+   }
+   svg path {
+      fill:white
+   }
+}
+
+   #log
+   {
+      height: 200px;
+      width: 100%;
+      overflow-y: scroll;
+      border: 1px solid #333333;
+      line-height: 1.3em;
+   }
+
+   .author
+   {
+      display: block;
+      margin-top: 1em;
+   }
+   </style> 
+<script>
+    function setCookie(cname,cvalue,exdays) {
   const d = new Date();
   d.setTime(d.getTime() + (exdays*24*60*60*1000));
   let expires = "expires=" + d.toUTCString();
@@ -28,18 +120,21 @@ function getCookie(cname) {
 function checkCookie() {
   let user = getCookie("username");
   if (user != "") {
-    // Code
   } else {
-       setCookie("phone", "+61444444445", 30);
+       setCookie("sosphone", "+61444444445", 30);
      }
   }
 
-
+	
+	
 </script>
 </head>
 
+<h1>Setup</h1>
+	<center><h3>Not implemented yet. Please tap the button below.</h3>
+    <button onClick="location.replace('/home')">Complete Setup</button>
+   </center>
 <body onload="checkCookie()">
-<button onClick="location.replace('/home')">Complete Setup</button>
 </body>
-
 </html>
+
