--- a/sossettings.html
+++ b/sossettings.html
@@ -32,9 +32,13 @@ function sossettings() {
 
 </script>
 </head>
-
 <body onload="sossettings();">
+	<center>
+<h1>SOS Settings</h1>
+<h3>Not implemented yet. A placeholder number has been added.</h3>
 <p id="sosphone-display"></p>
+</center>
+
 </body>
 
 </html>
