--- a/sos.html
+++ b/sos.html
@@ -110,5 +110,5 @@
 
 <h1>SOS</h1>
 <center><h3>NOT READY FOR RELEASE</h3></center>
-<p class="settingsmenu">Swipe left to go back.</p>
+<p class="settingsmenu" onclick="location.replace('/home')">Tap me to go back. (Will be removed)</p>
 </html>
