--- a/sos.html
+++ b/sos.html
@@ -107,6 +107,7 @@ var downloadTimer = setInterval(function(){
   if(timeleft <= 0){
     clearInterval(downloadTimer);
     document.getElementById("connstat").innerHTML = "GETTING LOCATION.";
+    locationgrab();
   } else {
     document.getElementById("connstat").innerHTML = timeleft
   }
@@ -149,6 +150,7 @@ box.style.display = 'block';
                 if (position.coords.accuracy < 10) {
         signalbar.outerHTML = "<path d=\"M7.65 44q-1 0-1.375-.925T6.6 41.45l34.9-34.9q.7-.7 1.625-.325.925.375.925 1.375v34.9q0 .65-.425 1.075Q43.2 44 42.55 44Z\"/>";
         connstat.innerHTML = "SENDING SMS TO SOS CONTACT NUMBER"
+        sendsos();
      } else if (position.coords.accuracy < 20) {
         connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (20+)";
      } else if (position.coords.accuracy < 30) {
