--- a/sos.html
+++ b/sos.html
@@ -127,7 +127,7 @@ function locationgrab() {
    function success(position) {
                 if (position.coords.accuracy < 10) {
         signalbar.outerHTML = "<path d=\"M7.65 44q-1 0-1.375-.925T6.6 41.45l34.9-34.9q.7-.7 1.625-.325.925.375.925 1.375v34.9q0 .65-.425 1.075Q43.2 44 42.55 44Z\"/>";
-        connstat.innerHTML = "SENDING SMS TO SOS CONTACT NUMBER"
+        
         sendsos();
      } else if (position.coords.accuracy < 20) {
         connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (20+)" + position.coords.accuracy;
@@ -162,8 +162,8 @@ function getCookie(cname) {
 
 function sendsos() {
     var phonedisplay = getCookie('sosphone')
-    window.open('sms://' + phonedisplay + "%38body%61test");
-    // sms://45777/&body=Body%20text%20here
+    connstat.innerHTML = "SENDING SMS TO SOS CONTACT NUMBER"
+    window.location = 'sms://' + phonedisplay + "&body=test"
     throw new Error("TERMINATING SCRIPT");
 };
 	
