--- a/sos.html
+++ b/sos.html
@@ -130,17 +130,18 @@ function locationgrab() {
         
         sendsos();
      } else if (position.coords.accuracy < 20) {
-        connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (20+)" + position.coords.accuracy;
+        connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (20+) " + position.coords.accuracy;
      } else if (position.coords.accuracy < 30) {
-        connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (30+)" + position.coords.accuracy;
+        connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (30+) " + position.coords.accuracy;
      } else if (position.coords.accuracy < 40) {
-        connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (40+)" + position.coords.accuracy;
+        connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (40+) " + position.coords.accuracy;
      } else {
     
-         connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (50+)" + position.coords.accuracy;
+         connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (50+) " + position.coords.accuracy;
      }
    };
    function error(positionError) {
+      document.getElementById("connstat").innerHTML = "WAITING FOR CONNECTION";
    }
 
 };
