--- a/sos.html
+++ b/sos.html
@@ -126,13 +126,11 @@ function locationgrab() {
 
    function success(position) {
                 if (position.coords.accuracy < 10) {
-        signalbar.outerHTML = "<path d=\"M7.65 44q-1 0-1.375-.925T6.6 41.45l34.9-34.9q.7-.7 1.625-.325.925.375.925 1.375v34.9q0 .65-.425 1.075Q43.2 44 42.55 44Z\"/>";
-        
         sendsos();
      } else if (position.coords.accuracy < 20) {
-        connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (20+) " + position.coords.accuracy;
+      sendsos();
      } else if (position.coords.accuracy < 30) {
-        connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (30+) " + position.coords.accuracy;
+      sendsos();
      } else if (position.coords.accuracy < 40) {
         connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (40+) " + position.coords.accuracy;
      } else {
