--- a/sos.html
+++ b/sos.html
@@ -132,10 +132,10 @@ function locationgrab() {
      } else if (position.coords.accuracy < 30) {
       sendsos();
      } else if (position.coords.accuracy < 40) {
-        connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (40+) " + position.coords.accuracy;
+        connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (30+) " + position.coords.accuracy;
      } else {
     
-         connstat.innerHTML = "POINT YOUR PHONE TO THE SKY (50+) " + position.coords.accuracy;
+         connstat.innerHTML = "POINT YOUR PHONE TO THE SKY" + position.coords.accuracy;
      }
    };
    function error(positionError) {
