--- a/sos.html
+++ b/sos.html
@@ -165,7 +165,7 @@ function getCookie(cname) {
 function sendsos() {
     var phonedisplay = getCookie('sosphone')
     document.getElementById("connstat").innerHTML = "SENDING SMS TO CONTACT NUMBER";
-    var links = 'sms://' + phonedisplay + "&body=SOS \n\n Test"
+    var links = 'sms://' + phonedisplay + "&body=SOS\u0021 \n\n Latitude\u003A "
     document.getElementById("linkout").innerHTML = links
     window.open(links, "_self");
 };
