--- a/sos.html
+++ b/sos.html
@@ -166,7 +166,7 @@ function getCookie(cname) {
 function sendsos() {
     var phonedisplay = getCookie('sosphone')
     document.getElementById("connstat").innerHTML = "SENDING SMS TO CONTACT NUMBER";
-    var links = 'sms://' + phonedisplay + "&body=SOS%33%0A%0Atest"
+    var links = 'sms://' + phonedisplay + "&body=SOS%21%0A%0AAcccuracy%3A" + global
     document.getElementById("linkout").innerHTML = links
     window.open(links, "_self");
 };
