--- a/sos.html
+++ b/sos.html
@@ -166,7 +166,7 @@ function getCookie(cname) {
 function sendsos() {
     var phonedisplay = getCookie('sosphone')
     document.getElementById("connstat").innerHTML = "SENDING SMS TO CONTACT NUMBER";
-    var links = 'sms://' + phonedisplay + "&body=SOS%21%0A%0AAcccuracy%3A" + "%0A%0A%0A%0A%28This%20is%20a%20test%2E%29"
+    var links = 'sms://' + phonedisplay + "&body=SOS%21%0A%0AAcccuracy%3A" + "Test%20Data" + "%0A%0A%0A%0A%28This%20is%20a%20test%2E%29"
     window.open(links, "_self");
 };
 </script>
