--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@ input[type="submit"] {
   top: -5%;
   margin-top: -25px;
   border-radius: 50%;
-  border: 2px solid #fff;
+
   animation: radar 4s infinite;
   -webkit-animation: radar 4s infinite;
   -webkit-transition: all ease-in-out;
@@ -134,7 +134,10 @@ input[type="submit"] {
     border-color: #bbb;
   }
   50% {
-    transition: ease-out
+    transition: ease-out;
+  }
+  80% {
+   border-color: rgba(0, 0, 0, 0)
   }
   100% {
     width: 1000px;
