--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@ input[type="submit"] {
   top: -5%;
   margin-top: -25px;
   border-radius: 50%;
-
+  border: 2px solid rgba(0, 0, 0, 0);
   animation: radar 4s infinite;
   -webkit-animation: radar 4s infinite;
   -webkit-transition: all ease-in-out;
