--- a/settings.html
+++ b/settings.html
@@ -10,7 +10,7 @@
 <h1>Settings</h1>
 <center><h3>Menu</h3></center>
 <center><a class="menulist" href="/sossettings.html">SOS</a></center>
-<center><a class="menulist" href="/uninstall">Uninstall</a></center>
+<center><a class="menulist" href="/uninstall">Update</a></center>
 <p class="settingsmenu">Swipe left to go back.</p>
-<p class="ver">v1.3</p>
+<p class="ver">v1.3.1</p>
 </html>
