--- a/setup.html
+++ b/setup.html
@@ -135,7 +135,7 @@ function checkCookie() {
 	<center><h2>Welcome!</h2>
    <h4>This will only take a second to get you up and running.</h4>
    <p>Please enter a phone number of a friend or a family member to contact in an emergency.</p>
-   <input type="tel" id="phone" name="phone" placeholder="+61491570006" required>
+   <input type="tel" id="phone" name="phone" placeholder="+61491570006" pattern="^\({0,1}((0|\+61)(2|4|3|7|8)){0,1}\){0,1}( |-){0,1}[0-9]{2}( |-){0,1}[0-9]{2}( |-){0,1}[0-9]{1}( |-){0,1}[0-9]{3}$" required>
     <button onClick="checkCookie(); location.replace('/home');">Finish</button>
    </center>
 <body>
