--- a/sossettings.html
+++ b/sossettings.html
@@ -132,7 +132,7 @@ function sossettings() {
 <body onload="sossettings();">
 	<center>
 <h1>SOS</h1>
-<h3>Not implemented yet. A placeholder number has been added.</h3>
+<h3>This is your current SOS number.</h3>
 <p id="sosphone-display"></p>
 <p class="settingsmenu">Swipe left to go back.</p>
 </center>
