--- a/sossettings.html
+++ b/sossettings.html
@@ -123,6 +123,13 @@ function getCookie(cname) {
   return "";
 }
 
+function checkCookie() {
+       var sostel = document.getElementById("phone").value
+       setCookie("sosphone", sostel, 30);
+  }
+
+	
+
 function sossettings() {
     var phonedisplay = getCookie('sosphone')
     document.getElementById('sosphone-display').innerHTML = phonedisplay
@@ -134,6 +141,8 @@ function sossettings() {
 <h1>SOS</h1>
 <h3>This is your current SOS number.</h3>
 <p id="sosphone-display"></p>
+<input type="tel" id="phone" name="phone" placeholder="+61491570006" pattern="^\({0,1}((0|\+61)(2|4|3|7|8)){0,1}\){0,1}( |-){0,1}[0-9]{2}( |-){0,1}[0-9]{2}( |-){0,1}[0-9]{1}( |-){0,1}[0-9]{3}$" required>
+<button onClick="checkCookie();">Set</button>
 <p class="settingsmenu">Swipe left to go back.</p>
 </center>
 
