--- a/home.html
+++ b/home.html
@@ -284,9 +284,25 @@ const box = document.getElementById('g-information');
 
 
    }
+   function getCookie(cname) {
+  let name = cname + "=";
+  let decodedCookie = decodeURIComponent(document.cookie);
+  let ca = decodedCookie.split(';');
+  for(let i = 0; i < ca.length; i++) {
+    let c = ca[i];
+    while (c.charAt(0) == ' ') {
+      c = c.substring(1);
+    }
+    if (c.indexOf(name) == 0) {
+      return c.substring(name.length, c.length);
+    }
+  }
+  return "";
+}
+
    function checkDemo() {
-  let demo = getDemo("isDemoDevice");
-  if (demo != "1") {
+  let user = getCookie("isDemoDevice");
+  if (user = 1) {
    location.replace("/demo")
   }
   }
