--- a/home.html
+++ b/home.html
@@ -149,7 +149,7 @@ input[type="submit"] {
 }
    </style> 
    </head> 
-   <body onload="checkRegistration();"> 
+   <body onload="checkDemo(); checkRegistration();"> 
       <div class="content">
          <div class="circle">
          </div>
