--- a/demo.html
+++ b/demo.html
@@ -90,6 +90,8 @@
 </head>
 
 <h1>Demo Mode</h1>
-	<center><h3>Not Ready At All.</h3></center>
+	<center><h3>An error has occurred.</h3>
+   <p>Please <span onClick="location.replace('/uninstall')">seek</span> assistance.</p>
+   </center>
 
 </html>
