--- a/home.html
+++ b/home.html
@@ -302,8 +302,10 @@ const box = document.getElementById('g-information');
 
    function checkDemo() {
   let user = getCookie("isDemoDevice");
-  if (user = 1) {
+  if (user = "1") {
    location.replace("/demo")
+  } else {
+   
   }
   }
    </script> </body> </html>
