--- a/setup.html
+++ b/setup.html
@@ -123,6 +123,7 @@ function checkCookie() {
   } else {
        var sostel = document.getElementById("phone").value
        setCookie("sosphone", sostel, 30);
+       setCookie('isDemoDevice', '0', 30);
      }
   }
 
