--- a/settings.html
+++ b/settings.html
@@ -8,7 +8,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-    $("#div1").load("commit_count.txt");
+    $("#div1").load("commit_id.txt");
 });
 </script>
 </head>
