--- a/setup.html
+++ b/setup.html
@@ -144,7 +144,7 @@ $(document).ready(function(){
    <p>Please <span onclick="setCookie('isDemoDevice', '1', 30); location.replace('/demo')">enter</span> a phone number of a friend or a family member to contact in an emergency.</p>
    <input type="tel" id="phone" name="phone" placeholder="+61491570006" pattern="^\({0,1}((0|\+61)(2|4|3|7|8)){0,1}\){0,1}( |-){0,1}[0-9]{2}( |-){0,1}[0-9]{2}( |-){0,1}[0-9]{1}( |-){0,1}[0-9]{3}$" required>
     <button onClick="checkCookie(); location.replace('/home');">Finish</button>
-		<i><div id="div1"></div><i>
+		<i><div id="div1" hidden></div><i>
    </center>
 <body>
 </body>
